--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
 		<h1>Get Big</h1>
-        <a href="push.html">Push</a>
+        <a class="muslce_btn" href="push.html">Push</a>
         <a href="pull.html">Pull</a>
         <a href="legs.html">Legs</a>
         
