--- a/pull.html
+++ b/pull.html
@@ -11,7 +11,7 @@ updated by WZ on September 26, 2021 at 8:18 PM -->
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Pull</title>
     <link rel="stylesheet" href="css/style_pull.css"> <!-- Link the specific style sheet -->
   </head>
   <body>
