--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ updated by WZ on September 26, 2021 at 8:18 PM -->
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>HomePage</title>
     <link rel="stylesheet" href="css/style_index.css"> <!-- Link the specific style sheet -->
   </head>
   <body>
@@ -48,7 +48,13 @@ updated by WZ on September 26, 2021 at 8:18 PM -->
                 <ul class="bullet">
                     <li>Having a membership forces you to hold yourself accountable for your fitness, becuase your paying for it.</li>
                 </ul>
- 
+                <!-- <p>
+                    <a href="http://jigsaw.w3.org/css-validator/check/referer">
+                        <img style="border:0;width:88px;height:31px"
+                            src="http://jigsaw.w3.org/css-validator/images/vcss"
+                            alt="Valid CSS!" />
+                    </a>
+                </p> -->
         </div>
         
     <!-- Class for each button to handle location and attribute, meant to take you to another page -->
