--- a/legs.html
+++ b/legs.html
@@ -11,7 +11,7 @@ updated by WZ on September 26, 2021 at 8:18 PM -->
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Legs</title>
     <link rel="stylesheet" href="css/style_legs.css">   <!-- Link the specific style sheet -->
   </head>
   <body>
@@ -67,6 +67,7 @@ updated by WZ on September 26, 2021 at 8:18 PM -->
 
                 </table>
             </div>
+            
         </div>
         
           <!-- Class for each button to handle location and attribute, meant to take you to another page -->
